Optimize several methods in TornadoApiReplacement
This commit replaces "get" methods with "getFirst" for efficiency in TornadoApiReplacement class. Strides have been replaced only in the loop condition to enhance performance. These changes potentially prevent possible runtime exceptions and ensure the smooth execution of parallelized tasks.